Use CopyOnWriteArrayList on SchemeManager
To prevent concurrent modification

Signed-off-by: johnniang <johnniang@fastmail.com>